k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-cheeserun-ingress
  namespace: back-cheeserun
spec:
   ingressClassName: public
   rules:
   - host: localhost
     http:
       paths:
       - path: /api/javeriana/estudiante
         pathType: Prefix
         backend:
           service:
             name: cheeserun-backend-service
             port:
               number: 8080
